fix row spacing on front page in IE

--- a/src/site/templates/root/css/template_ie.css
+++ b/src/site/templates/root/css/template_ie.css
@@ -88,3 +88,7 @@ br {
 	margin-left: 20ex;
 	padding-left: 5pt;
 }
+
+.blog .article_column .contentpaneopen {
+  margin-top: 10pt;
+}
